# ot-harjoitustyo

./: .coveragerc  .env  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: luokkakaavio.md  sekvenssikaavio.md
src/: config.py  db_connection.py  gui.py  index.py  initialize.py  main_app.py
src/entities/: card.py
src/repositories/: card_repository.py
src/tests/: app_test.py  card_repository_test.py  card_test.py  index_test.py  main_app_test.py  test_db.py  ui_test.py
src/tests/repositories/: card_repository_test.py
src/tests/ui/: home_page_view_test.py  new_card_view_test.py
src/ui/: home_page_view.py  new_card_view.py
